--- a/index.html
+++ b/index.html
@@ -3,95 +3,210 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>GoIT HomeWork 2</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
+      <!-- HEADER ALANI -->
       <nav>
-        <a href="./index.html">webstudio</a>
-
+        <a class="header-logo" href="./index.html"
+          >Web<span class="header-logo-span">Studio</span></a
+        >
         <ul>
-          <li><a href="studio">Studio</a></li>
-          <li><a href="portfolio">Portfolio</a></li>
-          <li><a href="contacs">Contacts</a></li>
+          <li>
+            <a class="menu" href="./index.html">Studio</a>
+          </li>
+          <li>
+            <a class="menu" href="">Portfolio</a>
+          </li>
+          <li>
+            <a class="menu" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
+      <address class="adres">
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a class="adres-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="adres-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
+
     <main>
-      <section>
-        <h1>effective solutions for your business</h1>
-        <button type="button">Order Service</button>
+      <section class="cta-section">
+        <!-- SECTION 1 ALANI -->
+        <h1 class="cta-header">
+          Effective Solutions <br />
+          for Your Business
+        </h1>
+        <button class="cta-button" type="button">Order Service</button>
       </section>
-      <section>
+
+      <section class="vision-section">
+        <!-- SECTION 2 ALANI -->
+        <h2 class="vision-header">Our features</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with
-              theperfect and creative solution.
+            <h3 class="vision-list-header">Strategy</h3>
+            <p class="vision-list-paragraph">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="vision-list-header">Punctuality</h3>
+            <p class="vision-list-paragraph">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="vision-list-header">Diligence</h3>
+            <p class="vision-list-paragraph">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="vision-list-header">Technologies</h3>
+            <p class="vision-list-paragraph">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
+
+      <section class="team-section">
+        <!-- SECTION 3 ALANI -->
+        <h2 class="team-header">Our Team</h2>
         <ul>
-          <li>
-            <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" />
-            <h3>mark guerrero</h3>
-            <p>Product Designer</p>
+          <li class="team-list">
+            <img
+              style="width: 264px"
+              src="./images/team-1.jpg"
+              alt="Mark Guerrero"
+            />
+            <h3 class="team-list-header">Mark Guerrero</h3>
+            <p class="team-list-paragraph">Product Designer</p>
           </li>
-          <li>
-            <img src="./images/tom.jpg" alt="Tom Ford" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+          <li class="team-list">
+            <img
+              style="width: 264px"
+              src="./images/team-2.jpg"
+              alt="Tom Ford"
+            />
+            <h3 class="team-list-header">Tom Ford</h3>
+            <p class="team-list-paragraph">Frontend Developer</p>
           </li>
-          <li>
-            <img src="./images/camila.jpg" alt="Camila Garcia" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+
+          <li class="team-list">
+            <img
+              style="width: 264px"
+              src="./images/team-3.jpg"
+              alt="Camila Garcia"
+            />
+            <h3 class="team-list-header">Camila Garcia</h3>
+            <p class="team-list-paragraph">Marketing</p>
           </li>
-          <li>
-            <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>ui designer</p>
+          <li class="team-list">
+            <img
+              style="width: 264px"
+              src="./images/team-4.jpg"
+              alt="Daniel Wilson"
+            />
+            <h3 class="team-list-header">Daniel Wilson</h3>
+            <p class="team-list-paragraph">UI Designer</p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Portfolio</h2>
+
+      <section class="portfolio-section">
+        <!-- SECTION 4 ALANI -->
+        <h2 class="portfolio-header">Our Portfolio</h2>
+        <ul>
+          <li>
+            <img src="./images/portfolio-1.jpg" alt="Banking App" width="360" />
+            <h3 class="portfolio-list-header">Banking App</h3>
+            <p class="portfolio-list-paragraph">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio-2.jpg"
+              alt="Cashless Payment"
+              width="360"
+            />
+            <h3 class="portfolio-list-header">Cashless Payment</h3>
+            <p class="portfolio-list-paragraph">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio-3.jpg"
+              alt="Meditation App"
+              width="360"
+            />
+            <h3 class="portfolio-list-header">Meditation App</h3>
+            <p class="portfolio-list-paragraph">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio-4.jpg"
+              alt="Taxi Service"
+              width="360"
+            />
+            <h3 class="portfolio-list-header">Taxi Service</h3>
+            <p class="portfolio-list-paragraph">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio-5.jpg"
+              alt="Screen Illustrations"
+              width="360"
+            />
+            <h3 class="portfolio-list-header">Screen Illustrations</h3>
+            <p class="portfolio-list-paragraph">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio-6.jpg"
+              alt="Online Courses"
+              width="360"
+            />
+            <h3 class="portfolio-list-header">Online Courses</h3>
+            <p class="portfolio-list-paragraph">Marketing</p>
+          </li>
+        </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <!-- FOOTER ALANI -->
+      <a class="footer-logo" href="./index.html"
+        >Web<span class="footer-logo-span">Studio</span></a
+      >
+      <p class="footer-paragraph">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
